--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+Augment/UserSettings/EditorUserSettings.asset
 
 # Unity3D generated meta files
 *.pidb.meta
